# NaI

./: .gitignore  CMakeCache.txt  CMakeCache_old.txt  CMakeCache_old202308111411.txt  CMakeLists.txt  Co60run1M.mac  G4History.macro  Makefile  NaI  NaI.cc  README.md  cmake_install.cmake  init.mac  run1.mac
NaI-build/: CMakeCache.txt  G4History.macro  Makefile  NaI  ScintTest.tar  _bis  buildSpectrum.C  cmake_install.cmake  run100M.mac  run10ktest_vis.mac  vis.mac
NaI-build/macroOut/: 10kScintReflectTest.tar  10kTest_10cmAbsLen.tar  10k_test_merged.root  NaI10kTestDispersion.tar  NaIoutput10MCo60.root  NaIoutput10kEDepTest.tar  NaIoutput10kEventScint.root  NaIoutput10kScintReflect.root  ScintTest10k.tar  getSpectrum.C  testImprovedScintProp.tar  tree1.root
data/: Li.csv
include/: NaIAction.hh  NaIDetector.hh  NaIDetectorConstruction.hh  NaIEvent.hh  NaIGenerator.hh  NaIPhysics.hh  NaIRun.hh  NaIStepping.hh
macros/: Co60run10M.mac  init_vis.mac
references/: ref1.txt  ref2.txt  ref3.txt
src/: NaIAction.cc  NaIDetector.cc  NaIDetectorConstruction.cc  NaIEvent.cc  NaIGenerator.cc  NaIPhysics.cc  NaIRun.cc  NaIStepping.cc  NaIrIndex.csv
tutorial/: det.mac  scandet.mac
